--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@ a {
     outline: none;
 }
 
-.pdf a {
+.pdf a {<a href="Class_10_Science_Chapter_1_Chemical_Reactions_and_Equations.pdf" download>
+Download Chapter 1 PDF
+</a>
+
     display: block;
     margin: 6px 0;
 }
@@ -147,4 +150,5 @@ function searchPDF() {
 </a>
 
 </body>
+
 </html>
